# opeelcky

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: huey_app.py
cli/: __init__.py  example.py  test.py
config/: celery.py
controller/: __init__.py  huey_controller.py
controller/actions/: __init__.py  base.py  const.py
controller/actions/empty/: __init__.py  action.py
controller/actions/transform/: __init__.py  action.py
controller/transformer/: __init__.py  const.py  controller.py
core/controller/: system.py
database/: db.py  entity.py  redis.py
static/: .gitignore  package-lock.json  package.json
static/src/lib/components/GraphNodes/: MultiOutput.svelte
static/src/routes/: +page.svelte
tasks/: __init__.py
tasks/demo/: __init__.py  add.py
tasks/main_task/: task.py
